<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adapt_background"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="@drawable/bg_top_bar"
        android:elevation="8dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_menu_button"
            android:contentDescription="@string/menu"
            android:padding="11dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/title_stack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profile_button"
            app:layout_constraintStart_toEndOf="@id/menu_button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.12"
                android:text="@string/app_name"
                android:textColor="@color/adapt_primary"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/context_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_patient_default"
                android:textColor="@color/adapt_on_surface_variant"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_avatar"
            android:contentDescription="@string/settings"
            android:padding="10dp"
            android:src="@drawable/ic_person_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:navGraph="@navigation/mobile_nav_graph" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/assist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_assistant"
        android:src="@drawable/ic_assistant"
        app:backgroundTint="@color/adapt_accent"
        app:borderWidth="0dp"
        app:elevation="12dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="@drawable/bg_bottom_nav"
        android:elevation="12dp"
        android:paddingTop="6dp"
        app:itemIconTint="@color/bottom_nav_selector"
        app:itemTextColor="@color/bottom_nav_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
